# ifrs9-financial-computer-ai

./: .gitignore  Dockerfile  README.md  docker-compose.gpu.yml  docker-compose.yml  instrucoes.txt  mlflow.db  pyproject.toml  requirements.txt  sanity_check.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
notebooks/: 01_estudo_clusters_portfolio.ipynb  pipeline.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/test/: events.out.tfevents
src/ifrs9_framework/: api.py  pipeline_orchestrator.py
src/ifrs9_framework/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
src/ifrs9_framework/catboost_info/learn/: events.out.tfevents
src/ifrs9_framework/config/: .env  config.json  config.yaml  metrics.json  pipeline_status.json
src/ifrs9_framework/data/: README.md  synthetic_generator.py
src/ifrs9_framework/data/docs/: Estrutura-Financeira.docx
src/ifrs9_framework/features/: feature_builder.py
src/ifrs9_framework/ui/: config_ui.html  dashboard_results.html
src/ifrs9_framework/visualization/: model_dashboard.py
